<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calendar</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="title">title</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="location">Location</string>
    <string name="affair">affairs</string>
    <string name="cancel">Back</string>
    <string name="confirm">Confirm</string>

    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="saving">Saving...</string>
    <string name="save_success">Saved</string>
</resources>