<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".EventActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_lay"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:text="@string/app_name"/>
</android.support.v7.widget.Toolbar>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/ed_title"
        android:hint="@string/title"
        android:inputType="" android:textSize="20sp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/start"/>
        <TextView
            android:id="@+id/date_start"
            android:layout_margin="10dp"
            android:gravity="left"
            android:layout_gravity="center"
            android:text="2019-4-27"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/stop"/>
        <TextView
            android:id="@+id/date_stop"
            android:layout_margin="10dp"
            android:text="2019-4-27"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent" android:inputType="" 
        android:layout_height="50dp"
        android:id="@+id/ed_location"
        android:hint="@string/location"
        android:drawableLeft="@drawable/ic_location"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/ed_event"
        android:hint="@string/affair"
        android:gravity="top"
        android:scrollbars="vertical"
        android:lines="10"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/textarea"
        android:layout_margin="10dp"
        android:inputType="" android:padding="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:gravity="center" />
        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:gravity="center" />
    </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>